Adding modified build and db update script